# oxanus

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.github/workflows/: test.yml
oxana/: Cargo.toml  README.md
oxana-macros/: Cargo.toml
oxana-macros/src/: job.rs  lib.rs  queue.rs  registry.rs  worker.rs
oxana-web/: Cargo.toml
oxana-web/examples/: web.rs
oxana-web/src/: error.rs  filters.rs  handlers.rs  lib.rs  templates.rs
oxana-web/templates/: _arg_pills.html  _auto_dismiss_notices.html  _job_progress.html  _stats_cards.html  busy.html  cron.html  dashboard.html  global_jobs.html  job_detail.html  metric_detail.html  metrics.html  on_demand.html  queue_detail.html  queues.html
oxana/benches/: concurrency.rs
oxana/examples/: batch.rs  cron.rs  cron_multiple.rs  cron_w_err.rs  dynamic.rs  dynamic_concurrency.rs  foo.rs  minimal.rs  resumable.rs  scheduled.rs  throttled.rs  unique.rs
oxana/src/: config.rs  context.rs  coordinator.rs  dispatcher.rs  drainer.rs  error.rs  executor.rs  job_envelope.rs  job_state.rs  launcher.rs  lib.rs  metrics.rs  prometheus.rs  queue.rs  registry.rs  result_collector.rs  runtime.rs  semaphores_map.rs  stats.rs  storage.rs  storage_builder.rs  storage_internal.rs  storage_keys.rs  storage_types.rs  throttler.rs  worker.rs  worker_event.rs  worker_registry.rs
oxana/tests/: compile_fail.rs
oxana/tests/integration/: batch.rs  cron.rs  dead.rs  drain.rs  dynamic.rs  main.rs  metrics.rs  panic.rs  registry.rs  retry.rs  shared.rs  standard.rs  stats.rs  unique.rs
oxana/tests/ui/: batch_missing_process_batch.rs  batch_missing_process_batch.stderr  batch_size_requires_timeout.rs  batch_size_requires_timeout.stderr  batch_size_zero.rs  batch_size_zero.stderr  batch_timeout_requires_size.rs  batch_timeout_requires_size.stderr  static_queue_discovery_interval.rs  static_queue_discovery_interval.stderr
oxanus/: Cargo.toml  README.md
oxanus-macros/: Cargo.toml
oxanus-macros/src/: job.rs  lib.rs  worker.rs
oxanus-web/: Cargo.toml
oxanus-web/examples/: web.rs
oxanus-web/src/: error.rs  filters.rs  handlers.rs  lib.rs  templates.rs
oxanus-web/templates/: _stats_cards.html  _tabs.html  busy.html  cron.html  dashboard.html  global_jobs.html  metric_detail.html  metrics.html  on_demand.html  queue_detail.html  queues.html
oxanus/benches/: concurrency.rs
oxanus/examples/: cron.rs  cron_multiple.rs  cron_w_err.rs  dynamic.rs  foo.rs  minimal.rs  resumable.rs  scheduled.rs  throttled.rs  unique.rs
oxanus/src/: config.rs  context.rs  coordinator.rs  dispatcher.rs  drainer.rs  error.rs  executor.rs  job_envelope.rs  lib.rs  metrics.rs  result_collector.rs  stats.rs  storage.rs  storage_builder.rs  storage_internal.rs  storage_keys.rs  storage_types.rs  test_helper.rs  worker.rs  worker_registry.rs
oxanus/tests/integration/: cron.rs  dead.rs  drain.rs  dynamic.rs  metrics.rs  panic.rs  registry.rs  retry.rs  shared.rs  standard.rs  stats.rs  unique.rs
scripts/: bench.sh
