[package]
name = "oxana-macros"
version = "2.0.0-rc.0"
edition = "2024"
license = "MIT"
description = "Macros for Oxana."
repository = "https://github.com/pragmaplatform/oxana"

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
heck = { version = "0.5", default-features = false }
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["parsing", "proc-macro", "derive"] }

[features]
default = []
registry = []
