[package]
name = "oxana"
version = "2.0.0-rc.4"
edition = "2024"
license = "MIT"
description = "A simple & fast job queue system."
repository = "https://github.com/pragmaplatform/oxana"
keywords = ["job", "scheduler", "worker", "cron"]
categories = ["asynchronous", "web-programming", "concurrency"]
exclude = [".*", "logo.jpg"]

[lib]
doctest = false
test = true

[features]
default = ["sentry", "tracing-instrument", "macros"]
sentry = ["sentry-core"]
tracing-instrument = []
macros = ["oxana-macros"]
registry = ["inventory", "oxana-macros?/registry"]
prometheus = ["prometheus-client"]

[dependencies]
async-trait = "0.1"
chrono = { version = "^0.4", features = ["serde"] }
cron = "^0.16"
deadpool-redis = "^0.23"
futures = { version = "^0.3" }
gethostname = "^1.1"
inventory = { version = "0.3", optional = true }
prometheus-client = { version = "0.24", optional = true }
sentry-core = { version = "^0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
thiserror = "^2.0"
tokio = { version = "^1.52", features = ["full"] }
tokio-util = { version = "^0.7" }
tracing = { version = "^0.1", features = ["log"] }
uuid = { version = "^1.23", features = ["serde", "v4"] }

oxana-macros = { workspace = true, optional = true }

[dev-dependencies]
divan = "^0.1"
dotenvy = "^0.15"
rand = "^0.10"
testresult = "^0.4"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
trybuild = "1.0"

oxana = { path = ".", default-features = false, features = ["registry"] }

[[bench]]
name = "concurrency"
harness = false
